wui teacher exercises list

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -87,6 +87,32 @@
     </div>
 </script>
 
+<script id="tm-teach-exercises-list" type="text/x-tm">
+    <nav class="crumb-wrap">
+        <a href="{{coursesHref}}" class="breadcrumb">{{courses}}</a>
+        <a class="breadcrumb">{{title}}</a>
+    </nav>
+    <div class="title-wrap">
+        <h3 class="title">{{title}}</h3>
+    </div>
+    <div id="exercises-list" class="collection divided-collection">
+        {{#exercises}}
+        <a class="collection-item {{^noBb}}bb-wrap{{/noBb}} row" href="{{href}}">
+            <div class="row">
+                <span class="col s6">{{title}}</span>
+                <span class="col s6 deadline"><span class="tooltipped" data-position="bottom" data-tooltip="{{deadlineLabel}}">{{deadline}}</span></span>
+            </div>
+            <div class="bb">
+                <span class="bb-green bb-item tooltipped" style="width: {{completedPc}}%" data-position="bottom" data-tooltip="{{completedLabel}}: {{completedCount}}"></span
+                ><span class="bb-yellow bb-item tooltipped" style="width: {{startedPc}}%" data-position="bottom" data-tooltip="{{startedLabel}}: {{startedCount}}"></span
+                ><span class="bb-blue bb-item tooltipped" style="width: {{ungradedPc}}%" data-position="bottom" data-tooltip="{{ungradedLabel}}: {{ungradedCount}}"></span
+                ><span class="bb-grey bb-item tooltipped" style="width: {{unstartedPc}}%" data-position="bottom" data-tooltip="{{unstartedLabel}}: {{unstartedCount}}"></span>
+            </div>
+        </a>
+        {{/exercises}}
+    </div>
+</script>
+
 <script id="tm-stud-exercises-list" type="text/x-tm">
     <nav class="crumb-wrap">
         <a href="{{coursesHref}}" class="breadcrumb">{{courses}}</a>
