--- a/wui/static/exdistpoc.html
+++ b/wui/static/exdistpoc.html
@@ -42,112 +42,33 @@
 
 <div id="content-container" class="container">
 
-<!--    <div id="exercises-list" class="collection divided-collection">-->
-<!--        <a class="collection-item bb-wrap row" href="">-->
-<!--            <span class="col s6">1.1 Pealkiri</span>-->
-<!--            <span class="col s4 deadline">1. juuli 2019, 11.11</span>-->
-<!--            <span class="col s2 grade">-->
-<!--                <img style="vertical-align: sub; width: 2.2rem; margin-right: 5px;" class="tooltipped" data-position="bottom" data-tooltip="Automaatkontrolli hinnang" src="../../doc/wui/design/auto_icon_1_v1.svg" alt="Automaatne hinnang"/>-->
-<!--                <i style="color: #aaa;" class="material-icons">face</i>-->
-<!--                <span >99/100</span></span>-->
-<!--            <div class="bb">-->
-<!--                <span class="bb-green bb-item" style="width: 100%">-->
-<!--            </div>-->
-<!--        </a>-->
-<!--    </div>-->
-
-    <nav class="crumb-wrap">
-        <a href="#!" class="breadcrumb">Kursused</a>
-        <a class="breadcrumb">Programmeerimine</a>
-    </nav>
 
     <div id="exercises-list" class="collection divided-collection">
-        <a class="collection-item bb-wrap row" href="asd">
-            <span class="col s6">1.1 Wutwut</span>
-            <span class="col s4 deadline"><span class="tooltipped" data-position="bottom" data-tooltip="Tähtaeg">1. juuli 2019, 11.11</span></span>
-            <span class="col s2 grade">
-               <span class="">6/100</span><span class="" style="">
-<!--                        <img class="tooltipped eval-logo-auto" src="/static/img/robot-logo.svg" data-position="bottom"-->
-<!--                             data-tooltip="asd" alt="asd"/>-->
-                        <i class="material-icons eval-logo-teacher">face</i>
-                </span>
-
-            </span>
+        <a class="collection-item bb-wrap" href="/courses/a/exercises">
+            <div class="row">
+                <span class="col s6">1.2 Optic Gaming vs GenG</span>
+                <span class="col s6 deadline">1. juuli 2019, 11.11</span>
+            </div>
             <div class="bb">
-                    <span class="bb-green bb-item" style="width: 100%">
-<!--                    <span class="bb-yellow bb-item" style="width: 100%">-->
-                        <!--                    <span class="bb-grey bb-item" style="width: 100%">-->
+                <span class="bb-green bb-item tooltipped" style="width: 10%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span><span class="bb-yellow bb-item tooltipped" style="width: 8%" data-position="bottom" data-tooltip="Nässu läinud: 42"></span><span class="bb-blue bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Hindamata: 42"></span><span class="bb-grey bb-item tooltipped" style="width: 40%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
             </div>
         </a>
 
-        <a class="collection-item bb-wrap row" href="asd">
-            <span class="col s6">1.1 Wutwut</span>
-            <span class="col s4 deadline">1. juuli 2019, 11.11</span>
-            <span class="col s2 grade">
-               <span class="">6/100</span>
-                <span class="" style=""><img class="tooltipped eval-logo-auto" src="../../doc/wui/design/auto_icon_1_v2_v1.svg" data-position="bottom"
-                             data-tooltip="asd" alt="asd"/>
-                    <!--                        <i class="material-icons eval-logo-teacher">face</i>-->
-                </span>
-
-            </span>
+        <a class="collection-item bb-wrap row" href="/courses/a/exercises">
+            <span class="col s6">1.2 Optic Gaming vs GenG</span>
+            <span class="col s6 deadline">1. juuli 2019, 11.11</span>
             <div class="bb">
-                    <span class="bb-green bb-item" style="width: 100%">
-<!--                    <span class="bb-yellow bb-item" style="width: 100%">-->
-                        <!--                    <span class="bb-grey bb-item" style="width: 100%">-->
+                <span class="bb-green bb-item tooltipped" style="width: 10%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span><span class="bb-yellow bb-item tooltipped" style="width: 8%" data-position="bottom" data-tooltip="Nässu läinud: 42"></span><span class="bb-blue bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Hindamata: 42"></span><span class="bb-grey bb-item tooltipped" style="width: 40%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
             </div>
         </a>
 
-        <a class="collection-item bb-wrap row" href="asd">
-            <span class="col s6">1.1 Wutwut</span>
-            <span class="col s4 deadline">1. juuli 2019, 11.11</span>
-            <span class="col s2 grade">
-               <span class="">6/100</span><span class="" style="">
-                        <img class="tooltipped eval-logo-missing" src="../../doc/wui/design/missing_feedback_v3.svg" data-position="bottom"
-                             data-tooltip="asd" alt="asd"/>
-                </span>
-
-            </span>
-            <div class="bb">
-                    <span class="bb-green bb-item" style="width: 100%">
-<!--                    <span class="bb-yellow bb-item" style="width: 100%">-->
-                        <!--                    <span class="bb-grey bb-item" style="width: 100%">-->
-            </div>
-        </a>
-
-        <a class="collection-item bb-wrap row" href="asd">
-            <span class="col s6">1.1 Wutwut</span>
-            <span class="col s4 deadline">1. juuli 2019, 11.11</span>
-            <span class="col s2 grade">
-               <span class="" style="margin-right: 34px;">6/100</span>
-            </span>
-            <div class="bb">
-                    <span class="bb-green bb-item" style="width: 100%">
-            </div>
-        </a>
-
-
-    </div>
-
-
-
-    <div id="courses-list" class="collection divided-collection">
-            <a class="collection-item bb-wrap" href="/courses/a/exercises">
-                <span>1.1 Kes on minu president?</span>
-                <div class="bb">
-                    <span class="bb-green bb-item tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span><span class="bb-white bb-item" style="width: 0.25%"></span></span><span class="bb-yellow bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="bb-white bb-item" style="width: 0.25%"></span><span class="bb-grey bb-item tooltipped" style="width: 27.5%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
-                </div>
-            </a>
-
-            <a class="collection-item bb-wrap" href="/courses/a/exercises">
-                <span>1.2 Optic Gaming vs GenG</span>
-                <div class="bb">
-                    <span class="bb-green bb-item tooltipped" style="width: 30%" data-position="bottom" data-tooltip="Lõpetanud: 42"></span></span><span class="bb-yellow bb-item tooltipped" style="width: 42%" data-position="bottom" data-tooltip="Alustanud: 42"></span><span class="bb-grey bb-item tooltipped" style="width: 28%" data-position="bottom" data-tooltip="Esitamata: 42"></span>
-                </div>
-            </a>
     </div>
 
 </div>
+
+
+
+
 
 <style>
 
@@ -165,101 +86,6 @@
 </style>
 
 
-<!-- Templates -->
-<script id="tm-navbar" type="text/x-tm">
-    <nav class="nav-center" role="navigation">
-        <div class="container">
-            <a href="/courses" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/></a>
-            <ul id="nav-mobile" class="hide-on-med-and-down">
-                <li><a class="nav-link" href="/courses">{{myCourses}}</a></li>
-            </ul>
-            <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
-                <a href="#!">
-                    <i id="profile-logo" class="left material-icons">account_circle</i>
-                    <span id="profile-name">{{userName}}</span><span id="profile-role"></span>
-                </a>
-            </div>
-        </div>
-    </nav>
-    <!-- Profile dropdown menu structure -->
-    <ul id="profile-dropdown" class="dropdown-content">
-        <span id="role-wrap"></span>
-        <li><a href="{{accountLink}}">{{account}}</a></li>
-        <li><a href="{{logoutLink}}">{{logOut}}</a></li>
-    </ul>
-</script>
-
-<script id="tm-role-link" type="text/x-tm">
-    <li><a id="{{changeRoleId}}">{{changeRole}}</a></li>
-</script>
-
-<script id="tm-sidenav" type="text/x-tm">
-    <ul id="slide-out" class="sidenav sidenav-fixed" data-course="{{courseId}}">
-        <li><a class="subheader">{{header}}</a></li>
-        <li class="divider-wrap"><div class="divider"></div></li>
-        <li><a class="waves-effect sidenav-close" href="/exercises/new?addto={{courseId}}"><i class="material-icons">create</i>{{newExercise}}</a></li>
-        <li><a class="waves-effect sidenav-close" href="/courses/{{courseId}}/addexercise"><i class="material-icons">add_box</i>{{addExistingExercise}}</a></li>
-        <li><a class="waves-effect sidenav-close" href="/courses/{{courseId}}/participants"><i class="material-icons">group</i>{{participants}}</a></li>
-        <li><a class="waves-effect sidenav-close" href="/courses/{{courseId}}/grades"><i class="material-icons">school</i>{{grades}}</a></li>
-    </ul>
-    <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-</script>
-
-<script id="tm-error-message" type="text/x-tm">
-    <i class="material-icons" style="margin-right: 10px;">error_outline</i>
-    <span class="student-toast">{{error}}</span>
-    <button onClick="M.Toast.dismissAll();" class="btn-flat toast-action">{{dismiss}}</button>
-</script>
-
-<script id="tm-add-course" type="text/x-tm">
-    <div class="input-field">
-        <textarea id="course-title" class="materialize-textarea"></textarea>
-        <label for="course-title">{{newCourseName}}</label>
-    </div>
-    <button id="add-course-button" class="waves-effect waves-light btn">{{addNewCourse}}</button>
-</script>
-
-<script id="tm-loading-placeholders" type="text/x-tm">
-    <div class="collection loading-collection">
-        <div class="loading-item"></div>
-        <div class="loading-item"></div>
-        <div class="loading-item"></div>
-        <div class="loading-item"></div>
-    </div>
-</script>
-
-<script id="tm-teach-course-list" type="text/x-tm">
-    <div class="title-wrap">
-        <h3 class="title">{{title}}</h3>
-        {{#addCourse}}
-        <a class="waves-effect waves-light btn title-button" href="/courses/new">
-            <i class="material-icons left">add</i>{{newCourse}}</a>
-        {{/addCourse}}
-    </div>
-    <div id="courses-list" class="collection divided-collection">
-        {{#courses}}
-        <div class="teacher-course-wrapper">
-            <a class="collection-item course-item" href="/courses/{{id}}/exercises">
-                {{title}}<span class="right course-student-count">{{count}} {{students}}</span>
-            </a>
-            <a class="course-add-students" href="/courses/{{id}}/participants">
-                <i class="material-icons">group</i>
-            </a>
-        </div>
-        {{/courses}}
-    </div>
-</script>
-
-<script id="tm-stud-course-list" type="text/x-tm">
-    <div class="title-wrap">
-        <h3 class="title">{{title}}</h3>
-    </div>
-    <div id="courses-list" class="collection divided-collection">
-        {{#courses}}
-        <a class="collection-item course-item" href="/courses/{{id}}/exercises">{{title}}</a>
-        {{/courses}}
-    </div>
-</script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://dev.idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
