wui poc new logo adjustments

--- a/wui/static/exdistpoc.html
+++ b/wui/static/exdistpoc.html
@@ -18,14 +18,17 @@
 <div id="nav-wrap">
     <nav class="nav-center" role="navigation">
         <div class="container">
-            <a href="/courses" class="brand-logo left"><img class="logo-img" src="../../doc/wui/design/new_logo.svg" alt="Lahendus"/></a>
+            <a href="/courses" class="brand-logo left">
+                <img style="height: 4rem; vertical-align: middle;" class="logo-img" src="../../doc/wui/design/new_logo.svg" alt="Lahendus"/>
+                <span style="font-size: 2.5rem">Lahendus</span>
+            </a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
-                <li><a class="nav-link" href="/courses">{{myCourses}}</a></li>
+                <li><a class="nav-link" href="/courses">Minu kursused</a></li>
             </ul>
             <div id="profile-wrapper" class="dropdown-trigger" data-target="profile-dropdown">
                 <a href="#!">
                     <i id="profile-logo" class="left material-icons">account_circle</i>
-                    <span id="profile-name">{{userName}}</span><span id="profile-role"></span>
+                    <span id="profile-name">Kuslap</span><span id="profile-role"></span>
                 </a>
             </div>
         </div>
