wui new main logo

--- a/wui/static/newlogopoc.html
+++ b/wui/static/newlogopoc.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/exercise.css"/>
 
-    <link href="https://fonts.googleapis.com/css?family=Averia+Libre|Baloo+Paaji|Jua|Katibeh|KoHo|Quando|Salsa|Sniglet|ZCOOL+XiaoWei&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
 </head>
 <body>
 
