EZ-1068 Missing courses placeholder update

--- a/wui/static/missingcoursespoc.html
+++ b/wui/static/missingcoursespoc.html
@@ -123,7 +123,8 @@
     }
 
     .missing-content-wrap .antennaball:hover {
-        background: #42ff3a;
+        background-color: #fbff00;
+        box-shadow: 0px 0px 10px 10px rgba(255, 255, 190, 0.8);
     }
 
     .missing-content-wrap .robot-eye {
