wui exercise page don't escape exercise text

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -177,7 +177,7 @@
                 </div>
                 <div>
                     <h2>{{exerciseTitle}}</h2>
-                    <div>{{exerciseText}}</div>
+                    <div>{{{exerciseText}}}</div>
                 </div>
             </div>
 
