--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -186,7 +186,7 @@
                     <textarea id="testing-submission"></textarea>
                 </div>
                 <div class="center">
-                    <button id="testing-submit" class="waves-effect waves-light btn">Esita</button>
+                    <button id="testing-submit" class="waves-effect waves-light btn">{{checkLabel}}</button>
                 </div>
             </div>
 
@@ -302,9 +302,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://dev.idp.lahendus.ut.ee/auth/js/keycloak.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/codemirror.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/mode/python/python.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.42.0/addon/display/autorefresh.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/codemirror.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/mode/python/python.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.4/addon/display/autorefresh.min.js"></script>
 <script src="/static/js/kotlin.js"></script>
 <script src="/static/js/kotlinx-coroutines-core.js"></script>
 <script src="/static/js/kotlinx-serialization-kotlinx-serialization-runtime.js "></script>
