EZ-1088 ungraded student exercise now has a blue bottom bar instead of yellow

--- a/wui/static/spaproto.html
+++ b/wui/static/spaproto.html
@@ -258,6 +258,9 @@
                 {{#started}}
                 <span class="bb-item bb-yellow"></span>
                 {{/started}}
+                {{#evalMissing}}
+                <span class="bb-item bb-blue"></span>
+                {{/evalMissing}}
                 {{#unstarted}}
                 <span class="bb-item bb-grey"></span>
                 {{/unstarted}}
