wui teacher submissions

--- a/wui/static/adhocpoc.html
+++ b/wui/static/adhocpoc.html
@@ -56,6 +56,77 @@
             </ul>
         </div>
         <div class="card-content">
+            <div id="students">
+
+                <div class="collection divided-collection">
+                    <a class="collection-item bb-wrap row" href="{{href}}">
+                        <div class="row">
+                            <span class="col s6">Kalle Malle</span>
+                            <span class="col s4 deadline">18. jaanuar 2019, 12.42</span>
+                            <span class="col s2 grade">
+                                <span>42/100</span
+                                ><img class="eval-logo-auto" src="img/robot-logo.svg" alt="{{autoLabel}}"/>
+                            </span>
+                        </div>
+                        <div class="bb">
+                            <span class="bb-item bb-green"></span>
+                        </div>
+                    </a>
+
+                    <a class="collection-item bb-wrap row" href="{{href}}">
+                        <div class="row">
+                            <span class="col s6">Kalle Malle</span>
+                            <span class="col s4 deadline"></span>
+                            <span class="col s2 grade">
+                                <span style="margin-right: 34px;">-/100</span
+                                >
+                            </span>
+                        </div>
+                        <div class="bb">
+                            <span class="bb-item bb-grey"></span>
+                        </div>
+                    </a>
+
+                    <a class="collection-item bb-wrap row" href="{{href}}">
+                        <div class="row">
+                            <span class="col s6">Kalle Malle</span>
+                            <span class="col s4 deadline">18. jaanuar 2019, 12.42</span>
+                            <span class="col s2 grade">
+                                <span>0/100</span
+                                ><i id="some" class="material-icons eval-logo-teacher">face</i>
+                            </span>
+                        </div>
+                        <div class="bb">
+                            <span class="bb-item bb-yellow"></span>
+                        </div>
+                    </a>
+
+                    <a class="collection-item bb-wrap row" href="{{href}}">
+                        <div class="row">
+                            <span class="col s6">Kalle Malle</span>
+                            <span class="col s4 deadline">18. jaanuar 2019, 12.42</span>
+                            <span class="col s2 grade">
+                                <span>-/100</span
+                                ><img class="eval-logo-missing" src="img/missing-logo.svg" alt="{{missingLabel}}"/>
+                            </span>
+                        </div>
+                        <div class="bb">
+                            <span class="bb-item bb-blue"></span>
+                        </div>
+                    </a>
+                </div>
+
+
+
+
+
+
+
+
+
+
+
+            </div>
             <div id="exercise">
                 <div class="exercise-info">
                     <p><span class="subheading">Tähtaeg: </span>18. jaanuar 2019, 12.42</p>
@@ -82,9 +153,6 @@
                 <div class="center">
                     <button id="testing-submit" class="waves-effect waves-light btn">Esita</button>
                 </div>
-            </div>
-
-            <div id="students">
             </div>
 
             <div id="student">
